--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.9"
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/syne": "^5.2.7",
+    "astro": "^5.15.9",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.15"
   }
 }
