--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.6.0",
     "@fontsource/inter": "^5.2.8",
     "@fontsource/syne": "^5.2.7",
     "astro": "^5.15.9",
